# mynotes

./: .gitignore  CLAUDE.md  OVERVIEW.md  config.yaml  config_minimal.yaml  eval_ocr_models.py  pyproject.toml  requirements.txt
.claude/: check-slow-tests.py  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: failing-tests-and-gpu-training.md
.planning/phases/01-data-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-review-annotation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-training-evaluation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md  deferred-items.md
.planning/phases/04-data-augmentation-and-gpu-training-via-clearml-agent/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/06-synthetic-generation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW.md
.planning/phases/07-augmentation-and-two-stage-training/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-REVIEW.md  07-VERIFICATION.md
.planning/quick/20260531-hpo-observability-resume-importances/: PLAN.md  SUMMARY.md
.planning/quick/20260531-hpo-pretrain-results-analysis/: PLAN.md  SUMMARY.md
.planning/quick/20260601-hpo-resume-test-inspect-cli-docs/: SUMMARY.md
.planning/quick/260502-e71-add-model-prediction-display-to-review-a/: 260502-e71-PLAN.md  260502-e71-SUMMARY.md
config/: finetune.yaml  pretrain.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.cpu.yml
docs/: clearml-agent-setup.md
scripts/: build_word_list.py  create_minimal_dataset.py  create_standalone_dataset.py  download_gmail_pdfs.py  register_synthetic_dataset.py  start_clearml_agent_docker.sh
src/: auto_label.py  backfill_page_paths.py  clearml_utils.py  cluster_sampler.py  ctc_utils.py  evaluate.py  experiment.py  flagging.py  generate_synthetic.py  hpo_inspect.py  manifest_schema.py  prepare_data.py  region_detector.py  review_app.py  review_state.py  review_to_clearml.py  run_config.py  train_ctc.py  tune.py
tests/: conftest.py  test_clearml_dataset_roundtrip.py  test_clearml_utils.py  test_cluster_sampler.py  test_ctc_utils.py  test_evaluate.py  test_flagging.py  test_generate_synthetic.py  test_prepare_data.py  test_region_detector.py  test_review_app_io.py  test_review_state.py  test_review_to_clearml.py  test_train_ctc.py  test_tune.py
tests/fixtures/: make_synthetic_pdf.py
(+35 files in other folders)
