[project]
name = "mynotes"
version = "0.1.0"
description = "Hebrew handwriting OCR pipeline — PDF to labeled dataset"
requires-python = ">=3.13"
dependencies = [
    "pdf2image==1.17.0",
    "opencv-python-headless==4.13.0.92",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "clearml==2.1.5",
    "streamlit==1.56.0",
    "scikit-learn>=1.5",
    "torch==2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[tool.uv]
package = true

[project.scripts]
prepare-data = "src.prepare_data:main"
cluster-sampler = "cluster_sampler:main"
backfill-page-paths = "backfill_page_paths:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
