[project]
name = "mynotes"
version = "0.1.0"
description = "Hebrew handwriting OCR pipeline — PDF to labeled dataset"
requires-python = ">=3.13"
dependencies = [
    "pdf2image==1.17.0",
    "opencv-python-headless==4.13.0.92",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pyyaml==6.0.3",
    "clearml==2.1.5",
    "streamlit==1.56.0",
    "scikit-learn==1.8.0",
    "torch==2.11.0",
    "albumentations==2.0.8",
    "openai==2.33.0",
    "optuna==4.8.0",
    "matplotlib==3.10.9",
    "trdg==1.8.0",
    "requests==2.33.1",
    "arabic-reshaper==3.0.1",
    "python-bidi==0.6.10",
    "google-api-python-client==2.169.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.11",
    "ty==0.0.32",
    "optuna-dashboard==0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
# trdg pins arabic-reshaper==2.1.3 (yanked) and opencv-python (conflicts with headless);
# overrides force the resolver to working versions (RESEARCH.md Pitfall 1 + 6).
override-dependencies = [
    "arabic-reshaper==3.0.1",
    "python-bidi==0.6.10",
    "opencv-python-headless==4.13.0.92",
]

[project.scripts]
prepare-data = "src.prepare_data:main"
train-ctc = "src.train_ctc:main"
evaluate = "src.evaluate:main"
experiment = "src.experiment:main"
auto-label = "src.auto_label:main"
tune-hpo = "src.tune:main"
tune-hpo-inspect = "src.hpo_inspect:main"
generate-synthetic = "src.generate_synthetic:main"
cluster-sampler = "cluster_sampler:main"
backfill-page-paths = "backfill_page_paths:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--durations=0"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
